<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2021.  Alpha Coders
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:iconTint="@color/nav_selector"
        android:title="@string/title_home"
        tools:targetApi="o" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_file_download"
        android:iconTint="@color/nav_selector"
        android:title="@string/progress"
        tools:targetApi="o" />

    <item
        android:id="@+id/navigation_downloads"
        android:icon="@drawable/ic_downloads"
        android:iconTint="@color/nav_selector"
        android:title="@string/title_downloads"
        tools:targetApi="o" />

</menu>
