<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2021.  Alpha Coders
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@color/colorPrimary"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="0dp"
                    app:civ_circle_background_color="@color/colorPrimary" />

                <TextView
                    android:id="@+id/info_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:includeFontPadding="false"
                    android:text="@string/_1"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:id="@+id/info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="16dp"
                android:text="@string/go_to_website"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="24dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_youtube_title"
                android:textAlignment="center"
                android:textColor="#FFC107"
                android:textSize="28sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/dialog_youtube_text"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/info_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:visibility="visible" />

    </LinearLayout>


</RelativeLayout>