<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2021.  Alpha Coders
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/downloadsCompletedList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingHorizontal="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="88dp" />

    <LinearLayout
        android:id="@+id/empty_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="32dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:src="@drawable/download_empty" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/you_haven_t_download_anything_yet"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/downloadsCompletedFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.abhishek.Videogy.utils.CustomButton
            android:id="@+id/clearAllFinishedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/delete"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/goToFolder"
            app:layout_constraintTop_toTopOf="parent" />

        <com.abhishek.Videogy.utils.CustomButton
            android:id="@+id/goToFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/go_to_folder"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

</RelativeLayout>