<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2021.  Alpha Coders
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/history_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/historySearchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history_toolbar">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_4sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/historySearchText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/white"
                    android:hint="@string/enter_url"
                    android:imeActionId="666"
                    android:imeActionLabel="Enter"
                    android:imeOptions="actionGo"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textColorHint="#90000000"
                    android:textSize="@dimen/_10sdp"
                    tools:targetApi="lollipop" />

                <ImageView
                    android:id="@+id/history_search_cancel"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/ic_close"
                    android:visibility="invisible" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/historySearchIcon"
            android:layout_width="@dimen/icon_dimen"
            android:layout_height="@dimen/icon_dimen"
            android:layout_marginEnd="@dimen/_8sdp"
            android:src="@drawable/ic_search" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNoHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history_toolbar">

        <ImageView
            android:layout_width="@dimen/download_icon_dimen"
            android:layout_height="@dimen/download_icon_dimen"
            android:layout_gravity="center"
            android:src="@drawable/ic_no_history"
            app:tint="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_8sdp"
            android:layout_weight="1"
            android:text="@string/no_history"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llShowHistory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historySearchBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:layout_weight="1"
                android:text="@string/history"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_15sdp" />

            <ImageView
                android:id="@+id/btn_delete_history"
                android:layout_width="@dimen/icon_dimen"
                android:layout_height="@dimen/icon_dimen"
                android:layout_gravity="center"
                android:src="@drawable/ic_delete"
                app:tint="@color/colorAccent" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHistoryList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/history_item" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>