<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2021.  Alpha Coders
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/nav_view">

        <!--Toolbar-->
        <include
            android:id="@+id/browser_toolbar"
            layout="@layout/browser_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Home -->
        <RelativeLayout
            android:id="@+id/home_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/browser_toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/instagram_btn"
                        android:layout_width="0dp"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:maxWidth="64dp"
                        android:src="@drawable/ic_instagram" />

                    <ImageView
                        android:id="@+id/fb_btn"
                        android:layout_width="0dp"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:maxWidth="64dp"
                        android:src="@drawable/ic_facebook" />

                    <ImageView
                        android:id="@+id/yt_btn"
                        android:layout_width="0dp"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:maxWidth="64dp"
                        android:src="@drawable/youtube" />

                    <ImageView
                        android:id="@+id/twitter_btn"
                        android:layout_width="0dp"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:maxWidth="64dp"
                        android:src="@drawable/ic_twitter" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/reddit_btn"
                        android:layout_width="0dp"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:maxWidth="64dp"
                        android:src="@drawable/ic_reddit" />

                    <ImageView
                        android:id="@+id/tumblr_btn"
                        android:layout_width="0dp"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:maxWidth="64dp"
                        android:src="@drawable/ic_tumblr" />

                    <ImageView
                        android:id="@+id/tiktok_btn"
                        android:layout_width="0dp"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:maxWidth="64dp"
                        android:src="@drawable/ic_tik_tok" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:maxWidth="64dp"
                        android:src="@drawable/ic_reddit"
                        android:visibility="invisible" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/guide_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="32dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/how_to_download"
                        android:textColor="#353535"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/start_guide"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="@drawable/guide_bg"
                        android:text="@string/start_guide"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </LinearLayout>

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner" />

        </RelativeLayout>

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        app:elevation="4dp"
        app:itemBackground="@android:color/white"
        app:itemIconTint="@color/nav_selector"
        app:itemTextColor="@color/nav_selector"
        app:labelVisibilityMode="auto"
        app:menu="@menu/bottom_nav_menu" />

</RelativeLayout>